feat: itemquantifiable, allowing for more precise recipe displays chore: updated Minestom version hash
Took 3 hours 11 minutes