@@ -2,9 +2,9 @@ package net.swofty.types.generic.item.impl.recipes;
 
 import lombok.Getter;
 import net.minestom.server.item.ItemStack;
+import net.minestom.server.item.Material;
 import net.swofty.commons.item.ItemType;
-import net.swofty.types.generic.item.ItemTypeLinker;
-import net.swofty.types.generic.item.MaterialQuantifiable;
+import net.swofty.types.generic.item.ItemQuantifiable;
 import net.swofty.types.generic.item.SkyBlockItem;
 import net.swofty.types.generic.item.impl.SkyBlockRecipe;
 import net.swofty.types.generic.user.SkyBlockPlayer;
@@ -17,12 +17,12 @@ import java.util.function.Function;
 public class ShapedRecipe extends SkyBlockRecipe<ShapedRecipe> {
     public static final List<ShapedRecipe> CACHED_RECIPES = new ArrayList<>();
 
-    private final Map<Character, MaterialQuantifiable> ingredientMap;
+    private final Map<Character, ItemQuantifiable> ingredientMap;
     private final Map<Character, Function<SkyBlockItem, Boolean>> extraRequirements = new HashMap<>();
-    private final List<String> pattern; // Using a list of strings for simplicity
+    private final List<String> pattern;
 
     public ShapedRecipe(RecipeType type,
-                        SkyBlockItem result, Map<Character, MaterialQuantifiable> ingredientMap,
+                        SkyBlockItem result, Map<Character, ItemQuantifiable> ingredientMap,
                         List<String> pattern, Function<SkyBlockPlayer, CraftingResult> canCraft) {
         super(result, type, canCraft);
         this.ingredientMap = ingredientMap;
@@ -30,15 +30,14 @@ public class ShapedRecipe extends SkyBlockRecipe<ShapedRecipe> {
     }
 
     public ShapedRecipe(RecipeType type,
-                        SkyBlockItem result, Map<Character, MaterialQuantifiable> ingredientMap,
+                        SkyBlockItem result, Map<Character, ItemQuantifiable> ingredientMap,
                         List<String> pattern) {
-        this(type, result, ingredientMap, pattern, (player) -> new CraftingResult(true, new String[]{}));
+        this(type, result, ingredientMap, pattern, (_) -> new CraftingResult(true, new String[]{}));
     }
 
     public void addExtraRequirement(char patternChar, Function<SkyBlockItem, Boolean> requirement) {
         extraRequirements.put(patternChar, requirement);
     }
-
 
     @Override
     public ShapedRecipe setResult(SkyBlockItem result) {
@@ -53,24 +52,21 @@ public class ShapedRecipe extends SkyBlockRecipe<ShapedRecipe> {
 
     @Override
     public SkyBlockItem[] consume(SkyBlockItem[] stacks) {
-        Map<Character, MaterialQuantifiable> ingredientMap = new HashMap<>(this.ingredientMap);
-        // Remove AIR from the ingredient map
+        Map<Character, ItemQuantifiable> ingredientMap = new HashMap<>(this.ingredientMap);
         ingredientMap.remove(' ');
 
-        Map<Character, MaterialQuantifiable> materialsToConsume = new HashMap<>(ingredientMap);
+        Map<Character, ItemQuantifiable> materialsToConsume = new HashMap<>(ingredientMap);
         SkyBlockItem[] modifiedStacks = Arrays.copyOf(stacks, stacks.length);
 
         int patternRows = pattern.size();
-        int patternCols = pattern.get(0).length();
+        int patternCols = pattern.getFirst().length();
 
-        // Try all possible starting positions (top-left corners) for the pattern in the grid
         for (int startRow = 0; startRow <= 3 - patternRows; startRow++) {
             for (int startCol = 0; startCol <= 3 - patternCols; startCol++) {
-                Map<Character, MaterialQuantifiable> tempMaterialsToConsume = new HashMap<>(materialsToConsume);
+                Map<Character, ItemQuantifiable> tempMaterialsToConsume = new HashMap<>(materialsToConsume);
                 SkyBlockItem[] tempModifiedStacks = Arrays.copyOf(modifiedStacks, modifiedStacks.length);
                 boolean patternMatched = true;
 
-                // Iterate through stacks within the potentially shifted pattern
                 for (int row = 0; row < patternRows; row++) {
                     for (int col = 0; col < patternCols; col++) {
                         int gridRow = startRow + row;
@@ -78,19 +74,21 @@ public class ShapedRecipe extends SkyBlockRecipe<ShapedRecipe> {
                         int index = gridRow * 3 + gridCol;
 
                         char patternChar = pattern.get(row).charAt(col);
-                        MaterialQuantifiable patternMaterial = ingredientMap.get(patternChar);
+                        ItemQuantifiable patternMaterial = ingredientMap.get(patternChar);
 
-                        if (patternMaterial != null && !patternMaterial.getMaterial().equals(ItemType.AIR)) {
-                            MaterialQuantifiable stackMaterial = MaterialQuantifiable.of(tempModifiedStacks[index].getItemStack());
+                        if (patternMaterial != null && !patternMaterial.getItem().getMaterial().equals(Material.AIR)) {
+                            ItemQuantifiable stackMaterial = ItemQuantifiable.of(tempModifiedStacks[index].getItemStack());
 
-                            // skip the iteration if stackMaterial is AIR
-                            if (stackMaterial.getMaterial() == null || stackMaterial.getMaterial().equals(ItemType.AIR)) {
+                            if (stackMaterial.getItem().getMaterial() == null || stackMaterial.getItem().getMaterial().equals(Material.AIR)) {
                                 patternMatched = false;
                                 break;
                             }
 
-                            if (stackMaterial.matches(patternMaterial.getMaterial())
-                                    || ExchangeableType.isExchangeable(stackMaterial.getMaterial(), patternMaterial.getMaterial())) {
+                            if (stackMaterial.matchesMaterial(patternMaterial.getItem())
+                                    || ExchangeableType.isExchangeable(
+                                            stackMaterial.getItem().getAttributeHandler().getPotentialType(),
+                                            patternMaterial.getItem().getAttributeHandler().getPotentialType()
+                            )) {
                                 int stackAmount = stackMaterial.getAmount();
                                 int consumeAmount = patternMaterial.getAmount();
 
@@ -115,7 +113,6 @@ public class ShapedRecipe extends SkyBlockRecipe<ShapedRecipe> {
                     }
                 }
 
-                // If all of the materials were consumed and the pattern matched, update the original stacks and return
                 if (tempMaterialsToConsume.isEmpty() && patternMatched) {
                     modifiedStacks = tempModifiedStacks;
                     return modifiedStacks;
@@ -123,7 +120,6 @@ public class ShapedRecipe extends SkyBlockRecipe<ShapedRecipe> {
             }
         }
 
-        // If there are still materials left to consume or the pattern didn't match, there were not enough materials in the stacks
         throw new IllegalStateException("Not enough materials to consume!");
     }
 
@@ -131,15 +127,15 @@ public class ShapedRecipe extends SkyBlockRecipe<ShapedRecipe> {
     public SkyBlockItem[] getRecipeDisplay() {
         SkyBlockItem[] recipeDisplay = new SkyBlockItem[9];
         int patternRows = pattern.size();
-        int patternCols = pattern.get(0).length();
+        int patternCols = pattern.getFirst().length();
 
         for (int row = 0; row < patternRows; row++) {
             for (int col = 0; col < patternCols; col++) {
                 char patternChar = pattern.get(row).charAt(col);
-                MaterialQuantifiable patternMaterial = ingredientMap.get(patternChar);
+                ItemQuantifiable patternMaterial = ingredientMap.get(patternChar);
 
                 if (patternMaterial != null) {
-                    recipeDisplay[row * 3 + col] = new SkyBlockItem(patternMaterial.getMaterial(), patternMaterial.getAmount());
+                    recipeDisplay[row * 3 + col] = patternMaterial.getItem();
                 }
             }
         }
@@ -148,7 +144,7 @@ public class ShapedRecipe extends SkyBlockRecipe<ShapedRecipe> {
     }
 
     @Override
-    public SkyBlockRecipe clone() {
+    public SkyBlockRecipe<?> clone() {
         return new ShapedRecipe(recipeType, result, ingredientMap, pattern, canCraft);
     }
 
@@ -156,34 +152,33 @@ public class ShapedRecipe extends SkyBlockRecipe<ShapedRecipe> {
         Map<Character, List<Integer>> positions = new HashMap<>();
 
         int patternRows = pattern.size();
-        int patternCols = pattern.get(0).length();
+        int patternCols = pattern.getFirst().length();
 
-        // Try all possible starting positions (top-left corners) for the pattern in the grid
         for (int startRow = 0; startRow <= 3 - patternRows; startRow++) {
             for (int startCol = 0; startCol <= 3 - patternCols; startCol++) {
 
-                // Iterate through stacks within the potentially shifted pattern
                 for (int i = 0; i < stacks.length; i++) {
                     int gridRow = i / 3;
                     int gridCol = i % 3;
 
-                    // If this stack is within our shifted pattern on the grid
                     if (gridRow >= startRow && gridRow < startRow + patternRows &&
                             gridCol >= startCol && gridCol < startCol + patternCols) {
 
                         char patternChar = pattern.get(gridRow - startRow).charAt(gridCol - startCol);
-                        MaterialQuantifiable patternMaterial = ingredientMap.get(patternChar);
+                        ItemQuantifiable patternMaterial = ingredientMap.get(patternChar);
 
-                        if (patternMaterial != null && !patternMaterial.getMaterial().equals(ItemType.AIR)) {
-                            MaterialQuantifiable stackMaterial = MaterialQuantifiable.of(stacks[i]);
+                        if (patternMaterial != null && !patternMaterial.getItem().getMaterial().equals(Material.AIR)) {
+                            ItemQuantifiable stackMaterial = ItemQuantifiable.of(stacks[i]);
 
-                            // skip the iteration if stackMaterial is AIR
-                            if (stackMaterial.getMaterial().equals(ItemType.AIR)) {
+                            if (stackMaterial.getItem().getMaterial().equals(Material.AIR)) {
                                 continue;
                             }
 
-                            if (stackMaterial.matches(patternMaterial.getMaterial())
-                                    || ExchangeableType.isExchangeable(stackMaterial.getMaterial(), patternMaterial.getMaterial())) {
+                            if (stackMaterial.matchesMaterial(patternMaterial.getItem())
+                                    || ExchangeableType.isExchangeable(
+                                            stackMaterial.getItem().getAttributeHandler().getPotentialType(),
+                                            patternMaterial.getItem().getAttributeHandler().getPotentialType()
+                            )) {
                                 int stackAmount = stackMaterial.getAmount();
                                 int consumeAmount = patternMaterial.getAmount();
 
@@ -198,7 +193,6 @@ public class ShapedRecipe extends SkyBlockRecipe<ShapedRecipe> {
             }
         }
 
-        // Remove duplicate positions from the same character
         positions.forEach((character, positionsList) -> {
             Set<Integer> positionsSet = new HashSet<>(positionsList);
             positionsList.clear();
@@ -229,10 +223,10 @@ public class ShapedRecipe extends SkyBlockRecipe<ShapedRecipe> {
                                 }
                             } catch (Exception e) {
                                 Logger.error("Error in recipe " + recipe.getResult().toString() + " at row " + row + " col " + col);
+                                e.printStackTrace();
                             }
                         }
                     }
-                    System.out.println("First Filter: " + recipe.getRecipeDisplay().toString());
                     return false;
                 })
                 .filter(recipe -> {
@@ -240,21 +234,17 @@ public class ShapedRecipe extends SkyBlockRecipe<ShapedRecipe> {
                         Character character = entry.getKey();
 
                         Function<SkyBlockItem, Boolean> extraRequirements = recipe.getExtraRequirements().get(character);
-                        System.out.println("ExtraRequirements: " + extraRequirements.toString());
                         if (extraRequirements == null) {
                             continue;
                         }
 
                         for (int position : entry.getValue()) {
                             SkyBlockItem item = new SkyBlockItem(stacks[position]);
-                            System.out.println("Item: " + item.toString());
                             if (!extraRequirements.apply(item)) {
                                 return false;
                             }
-                            //extraRequirements.apply(item);
                         }
                     }
-                    System.out.println("Second Filter: " + recipe.getRecipeDisplay().toString());
                     return true;
                 })
                 .max(Comparator.comparing(recipe -> {
@@ -272,12 +262,13 @@ public class ShapedRecipe extends SkyBlockRecipe<ShapedRecipe> {
         for (int row = 0; row < pattern.size(); row++) {
             for (int col = 0; col < pattern.get(row).length(); col++) {
                 char patternChar = pattern.get(row).charAt(col);
-                MaterialQuantifiable patternMaterial = recipe.getIngredientMap().get(patternChar);
-                MaterialQuantifiable gridMaterial = MaterialQuantifiable.of(grid[startRow + row][startCol + col]);
+                ItemQuantifiable patternMaterial = recipe.getIngredientMap().get(patternChar);
+                ItemQuantifiable gridMaterial = ItemQuantifiable.of(grid[startRow + row][startCol + col]);
 
-                if (!gridMaterial.matches(patternMaterial.getMaterial()) ||
+                if (!gridMaterial.matchesMaterial(patternMaterial.getItem()) ||
                         gridMaterial.getAmount() < patternMaterial.getAmount()) {
-                    if (!ExchangeableType.isExchangeable(gridMaterial.getMaterial(), patternMaterial.getMaterial())) {
+                    if (!ExchangeableType.isExchangeable(gridMaterial.getItem().getAttributeHandler().getPotentialType(),
+                            patternMaterial.getItem().getAttributeHandler().getPotentialType())) {
                         return false;
                     }
                 }
